Fixed issues with white space on mobile

--- a/code/style.css
+++ b/code/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* width: 100%; */
+  width: auto;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -30,8 +30,6 @@ header {
 
 .header-title {
   color: rgb(0,51,51, 0.75);
-  border-top: 10px rgb(0,51,51, 0.75) solid;
-  border-bottom: 10px rgb(0,51,51, 0.75) solid;
   padding: 1rem 0rem;
   font-size: 50px;
   text-align: center;
@@ -43,11 +41,10 @@ header {
 
 form {
   padding: 1rem;
-  min-width: 400px;
   display: grid;
   justify-content: center;
   gap: 1rem;
-  margin: 2rem;
+  margin: 1rem;
   background-color: rgb(0,51,51);
   border: 5px solid rgb(0,51,51);
 }
@@ -120,7 +117,6 @@ form button:hover {
   font-size: 30px;
   text-align: center;
   padding: 3rem;
-  min-width: 400px;
   align-self: center;
   gap: 1rem;
   margin: 2rem;
@@ -131,9 +127,8 @@ form button:hover {
 .accordion {
   padding: 1rem;
   border: 5px solid rgb(0,51,51);
-  min-width: 400px;
   display: block;
-  margin: 2rem;
+  margin: 1rem;
 }
 
 .accordion-header {
@@ -226,12 +221,14 @@ footer {
 /* Desktop elements that should behave differently */
 @media (min-width: 992px) {
   .container {
+    max-width: ;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* padding: 1rem; */
   }
   .header-title {
     font-size: 70px;
+    border-top: 10px rgb(0,51,51, 0.75) solid;
+    border-bottom: 10px rgb(0,51,51, 0.75) solid;
   }
   label {
     font-size: 14px;
@@ -246,6 +243,8 @@ footer {
 @media (min-width: 768px) and (max-width: 991px){
   .header-title {
     font-size: 70px;
+    border-top: 10px rgb(0,51,51, 0.75) solid;
+    border-bottom: 10px rgb(0,51,51, 0.75) solid;
   }
   .submit-form {
     font-size: 40px;
